syntax = "proto2";

package ui;

import "item.proto";

message SecretCard {
    required int32 cardId=1;
    required int32 star=2;
}

//天机牌界面信息请求
message CSQuestSecretCardGet {

}

//天机牌界面信息回复
message SCQuestSecretCardGet {
    //翻牌次数
    required int32 num=1;
    //星数
    required int32 totalStar=2;
    //运势箱开启
    repeated int32 openBoxList=3;
    //天机牌
    repeated SecretCard cardList=4;


}

//窥探天机
message CSQuestSecretSpy {

}

//窥探天机回复
message SCQuestSecretSpy {
    //翻牌次数
    required int32 num=1;
    //下发天机
    repeated SecretCard cardList=2;
}

//接取任务
message CSQuestSecretPickUp {
    required int32 cardId=1;
}

//接取任务回复
message SCQuestSecretPickUp {
    required int32 cardId=1;
}


//放弃任务
message CSQuestSecretDiscard {

}

//星数奖励
message CSQuestSecretStarRew {
    required int32 openBox=1;
}

//星数奖励回复
message SCQuestSecretStarRew {
    //运势箱开启
    required int32 openBox=1;
}

//一键完成
message CSQuestSecretFinish {
}

//完成回复
message SCQuestSecretFinish {
    //物品
    repeated ItemInfo itemList=1;
    // false 任务完成 true 一键完成
    required bool result=2;
}


//天机牌任务单次完成
message CSQuestSecretImmediate {
    
}

//天机牌任务当次完成回复
message SCQuestSecretImmediate {
    repeated ItemInfo itemInfo=1;
}















